2009-02-16  Anantanarayanan Iyengar  <ananta@chromium.org>

        Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=23973
        ScrollView::scrollContents can be invoked during view shutdown.  In
        this scenario the FrameView::hostWindow method can return NULL, which
        indicates that the frame/page is being destroyed. This causes a crash
        when we try to dereference a NULL hostWindow pointer.  Fix is to add a
        NULL check for this.  

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::scrollContents):

2009-02-26  Rahul Kuchhal  <kuchhal@chromium.org>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=24003
        Fix a crash caused by unsafe type conversion.

        Test: fast/block/positioning/absolute-in-inline-rtl-4.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::calcAbsoluteHorizontalValues):

2009-02-26  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=24202
        Have drawNodeHighlight clip instead of clearing. This makes it work for
        both Safari and Chromium since Chromium draws the inspector highlighting
        in the same buffer as the page.

        * inspector/InspectorController.cpp:
        (WebCore::quadToPath):
        (WebCore::drawOutlinedQuad):
        (WebCore::drawOutlinedQuadWithClip):
        (WebCore::drawHighlightForBox):

2009-02-26  David Hyatt  <hyatt@apple.com>

        Reviewed by Dan Bernstein & Darin Adler

        Make sure the border/padding are properly omitted at the start of an inline that is a continuation.
        
        Added fast/inline/inline-continuation-borders.html

        * rendering/InlineFlowBox.cpp:
        (WebCore::InlineFlowBox::determineSpacingForFlowBoxes):

2009-02-26  Simon Fraser  <simon.fraser@apple.com>

        Build fix, no review.
        
        Try to fix the wx build after r41218.
